--- a/index.html
+++ b/index.html
@@ -40,10 +40,13 @@
         }
 
         #image-container {
-            position: relative;
+            position: fixed;
+            top: 0;
+            left: 0;
             width: 100%;
             height: 100%;
             overflow: hidden;
+            z-index: -1;
         }
 
         #image-container img {
@@ -54,7 +57,7 @@
             height: 100%;
             object-fit: cover;
             opacity: 0;
-            transition: opacity 1s;
+            transition: opacity 1s ease-in-out;
         }
 
         #image-container img.active {
@@ -156,7 +159,10 @@
             }
 
             images.forEach(img => img.classList.remove('active'));
-            document.querySelector(`#image-container img[src="${showImage}"]`).classList.add('active');
+            const targetImage = document.querySelector(`#image-container img[src="${showImage}"]`);
+            if (targetImage) {
+                targetImage.classList.add('active');
+            }
             passcodeInput.value = ""; // Clear the input field
         }
 
@@ -170,3 +176,4 @@
     </script>
 </body>
 </html>
+
