--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kaz's Valentine</title>
+    <title>Valentine's Question</title>
     <style>
         body {
             margin: 0;
@@ -22,21 +22,9 @@
 
         h1 {
             font-size: 3em;
-            margin-bottom: 10px;
-        }
-
-        .flashing-text {
-            font-size: 1.5em;
-            animation: flash 0.5s infinite;
-        }
-
-        @keyframes flash {
-            0%, 100% {
-                opacity: 1;
-            }
-            50% {
-                opacity: 0;
-            }
+            margin: 0;
+            position: relative;
+            z-index: 1;
         }
 
         #image-container {
@@ -63,39 +51,10 @@
         #image-container img.active {
             opacity: 1;
         }
-
-        input {
-            padding: 10px;
-            font-size: 1em;
-            margin: 10px;
-            border: none;
-            border-radius: 5px;
-            outline: none;
-        }
-
-        button {
-            padding: 10px 20px;
-            font-size: 1em;
-            margin: 10px;
-            border: none;
-            border-radius: 5px;
-            background: #ff004c;
-            color: white;
-            cursor: pointer;
-        }
-
-        button:hover {
-            background: #e60044;
-        }
-
-        #result {
-            margin-top: 20px;
-        }
     </style>
 </head>
 <body>
-    <h1>;) I have an important question for you.</h1>
-    <div class="flashing-text">Please enter the correct phrase</div>
+    <h1>I have an important question for you</h1>
 
     <div id="image-container">
         <img src="one.jpg" class="active" alt="Image 1">
@@ -105,70 +64,24 @@
         <img src="five.jpg" alt="Image 5">
     </div>
 
-    <input type="text" id="passcode" placeholder="Enter passcode">
-    <button onclick="checkPasscode()">Enter</button>
-
-    <div id="result"></div>
-
     <script>
-        // Slideshow Logic
+        // Get all images and set the initial index
         const images = document.querySelectorAll('#image-container img');
         let currentIndex = 0;
 
-        function startSlideshow() {
-            setInterval(() => {
-                images.forEach((img, index) => {
-                    img.classList.remove('active');
-                    if (index === currentIndex) {
-                        img.classList.add('active');
-                    }
-                });
-                currentIndex = (currentIndex + 1) % 5; // Loop through the 5 images
-            }, 3000); // Change image every 3 seconds
+        // Function to update the active image
+        function updateImage() {
+            images.forEach((img, index) => {
+                img.classList.remove('active');
+                if (index === currentIndex) {
+                    img.classList.add('active');
+                }
+            });
+            currentIndex = (currentIndex + 1) % images.length; // Loop back to the first image
         }
 
-        // Passcode Logic
-        const passcodeInput = document.getElementById('passcode');
-        const resultDiv = document.getElementById('result');
-
-        function checkPasscode() {
-            const input = passcodeInput.value.trim().toLowerCase();
-            let showImage;
-            resultDiv.innerHTML = ''; // Clear previous result
-
-            if (["chains", "chain"].includes(input)) {
-                showImage = "wow.jpg";
-                resultDiv.innerHTML = '<span style="color: red;">Try again</span>';
-            } else if (["i love you more", "iloveyoumore"].includes(input)) {
-                showImage = "wrong.jpg";
-            } else if (["i love you", "valentines", "valentines?", "love"].includes(input)) {
-                showImage = "six.jpg";
-                resultDiv.innerHTML = `
-                    <h2>Will you be my Valentine? -Chris</h2>
-                    <button onclick="showFinalImage(true)">Yes</button>
-                    <button onclick="showFinalImage(false)">No</button>
-                `;
-            } else {
-                showImage = "eight.jpg";
-                resultDiv.innerHTML = '<span style="color: red;">Please try again</span>';
-            }
-
-            // Display the appropriate image
-            images.forEach(img => img.classList.remove('active'));
-            document.querySelector(`#image-container img[src="${showImage}"]`).classList.add('active');
-            passcodeInput.value = ""; // Clear the input field
-        }
-
-        function showFinalImage(yes) {
-            if (yes) {
-                images.forEach(img => img.classList.remove('active'));
-                document.querySelector(`#image-container img[src="seven.jpg"]`).classList.add('active');
-                resultDiv.innerHTML = '<h2>I'm so grateful to call you mine, I love you babe!</h2>';
-            }
-        }
-
-        // Start the slideshow when the page loads
-        startSlideshow();
+        // Change image every 3 seconds
+        setInterval(updateImage, 3000);
     </script>
 </body>
 </html>
